Fixed navbar and horizontal scrolling

--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -11,3 +11,6 @@
     background-color: #343a40 !important;
   }
   
+  a {
+    cursor: pointer;
+  }
